del artist profile and inset booking email ui
